Modification de l'icône du bouton du générateur de stuff sur le menu principal

--- a/LoL_UltimateBraveryTournament/LoL_UltimateBraveryTournament.csproj
+++ b/LoL_UltimateBraveryTournament/LoL_UltimateBraveryTournament.csproj
@@ -38,4 +38,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+
 </Project>
