--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "css-loader": "^6.0.0",
     "electron": "23.1.0",
-    "electron-builder": "^23.6.0",
+    "electron-builder": "^24.0.0-alpha.12",
     "file-loader": "^6.2.0",
     "node-loader": "^2.0.0",
     "raw-loader": "^4.0.2",
