--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fr.infinity54.lol_ultimatebraverytournament",
   "productName": "Gestionnaire de tournoi Ultimate Bravery",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "App used to manage more easily and quickly any Ultimate Bravery Tournament for League of Legends.",
   "license": "CC-BY-SA-4.0",
   "main": ".webpack/main",
@@ -16,30 +16,30 @@
     "email": "contact@infinity54.fr"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.4",
-    "@electron-forge/maker-deb": "^6.0.4",
-    "@electron-forge/maker-rpm": "^6.0.4",
-    "@electron-forge/maker-squirrel": "^6.0.4",
-    "@electron-forge/maker-zip": "^6.0.4",
-    "@electron-forge/plugin-webpack": "^6.0.4",
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-webpack": "^6.4.2",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "css-loader": "^6.0.0",
-    "electron": "23.1.0",
-    "electron-builder": "^24.0.0-alpha.12",
+    "electron": "27.0.1",
+    "electron-builder": "^24.6.4",
     "file-loader": "^6.2.0",
     "node-loader": "^2.0.0",
     "raw-loader": "^4.0.2",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.57.1",
+    "sass": "^1.69.4",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.0.0",
     "twig-html-loader": "^0.1.9"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
-    "electron-updater": "^5.3.0",
-    "jquery": "^3.6.3",
+    "bootstrap": "^5.3.2",
+    "electron-updater": "^6.1.4",
+    "jquery": "^3.7.1",
     "tippy.js": "^6.3.7"
   },
   "build": {
