--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "electron-updater": "^6.3.9"
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.7",
+    "electron-settings": "^4.0.4",
+    "electron-updater": "^6.3.9",
+    "pinia": "^3.0.3",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
@@ -36,6 +41,7 @@
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "^10.3.0",
     "prettier": "^3.6.2",
+    "sass": "^1.89.2",
     "vite": "^7.0.5",
     "vue": "^3.5.17",
     "vue-eslint-parser": "^10.2.0"
