--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "bootstrap": "^5.3.7",
     "electron-settings": "^4.0.4",
     "electron-updater": "^6.3.9",
-    "pinia": "^3.0.3",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "vue-tippy": "^6.7.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^2.0.0",
