Migration de l'identité d'InFinity_54 vers Noxelis

--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,6 +1,6 @@
 provider: 'github'
 repo: 'LoL_UltimateBraveryTournament'
-owner: 'InFinity54'
+owner: 'Noxelis'
 private: false
 releaseType: 'release'
-updaterCacheDirName: fr.infinity54.lol_ultimatebraverytournament-updater
+updaterCacheDirName: dev.noxelis.lol_ultimatebraverytournament-updater
