--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,4 +1,4 @@
-appId: fr.infinity54.lol_ultimatebraverytournament
+appId: dev.noxelis.lol_ultimatebraverytournament
 productName: Gestionnaire de Tournoi Ultimate Bravery
 directories:
   buildResources: build
